--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "16.6.3",
-    "react-native": "0.58.4"
+    "react-native": "0.58.4",
+    "react-native-camera": "^2.5.0",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-picker": "^0.28.1",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.8.1"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
