--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "16.6.3",
